# Kai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
.github/workflows/cmake_toolchains/: aarch64-unknown-linux-gnu2.19.cmake  aarch64-unknown-linux-gnu2.24.cmake  aarch64-unknown-linux-gnu2.28.cmake  aarch64-unknown-linux-gnu2.31.cmake  aarch64-unknown-openbsd.cmake  alpha-unknown-linux-gnu2.7.cmake  arm-unknown-linux-gnueabi2.11.cmake  arm-unknown-linux-gnueabi2.13.cmake  arm-unknown-linux-gnueabi2.19.cmake  arm-unknown-linux-gnueabi2.24.cmake  arm-unknown-linux-gnueabi2.7.cmake  arm-unknown-linux-gnueabihf2.13.cmake  arm-unknown-linux-gnueabihf2.19.cmake  arm-unknown-linux-gnueabihf2.24.cmake  arm-unknown-linux-gnueabihf2.28.cmake  arm-unknown-linux-gnueabihf2.31.cmake  arm-unknown-openbsd.cmake  hppa-unknown-linux-gnu2.7.cmake  i386-unknown-linux-gnu2.11.cmake  i386-unknown-linux-gnu2.17.cmake  i386-unknown-linux-gnu2.19.cmake  i386-unknown-linux-gnu2.24.cmake  i386-unknown-linux-gnu2.28.cmake  i386-unknown-linux-gnu2.31.cmake  i386-unknown-linux-gnu2.7.cmake  ia64-unknown-linux-gnu.cmake  ia64-unknown-linux-gnu2.11.cmake  ia64-unknown-linux-gnu2.13.cmake  ia64-unknown-linux-gnu2.7.cmake  mips-unknown-linux-gnu2.11.cmake  mips-unknown-linux-gnu2.13.cmake  mips-unknown-linux-gnu2.19.cmake  mips-unknown-linux-gnu2.24.cmake  mips-unknown-linux-gnu2.28.cmake  mips-unknown-linux-gnu2.7.cmake  mips64-unknown-openbsd.cmake  mips64el-unknown-linux-gnuabi642.24.cmake  mips64el-unknown-linux-gnuabi642.28.cmake  mips64el-unknown-linux-gnuabi642.31.cmake  mips64el-unknown-openbsd.cmake  (+40 more)
src/: argparse.c  argparse.h  argparser.c  argparser.h  biggestint.c  biggestint.h  buffer.c  buffer.h  callbacks.c  callbacks.h  cir.c  cir.h  clioptions.c  clioptions.h  distros.c  distros.h  dump.c  dump.h  errors.c  errors.h  ffmpeg_muxer.c  ffmpeg_muxer.h  ffmpegc_muxer.c  ffmpegc_muxer.h  filesystem.c  filesystem.h  format.c  format.h  fstream.c  fstream.h  getdents.c  getdents.h  guess_file_format.c  guess_file_format.h  guess_uri.c  guess_uri.h  hex.c  httpclient.c  httpclient.h  kai.h  (+62 more)
src/cpython/: setup.py
src/cpython/kai/: __init__.py  __kai.py  __version__.py  main.py
src/cpython/kai/exceptions/: __init__.py  codes.py  exception.py  exceptions.py  mapping.py  utils.py
src/cpython/kai/types/: __init__.py  base.py  m3u8.py  m3u8stream.py
src/fs/: chdir.c  chdir.h  chmod.c  chmod.h  cp.c  cwd.c  exists.c  expnd.c  expnd.h  exsts.h  fstream.c  fstream.h  getexec.c  getexec.h  mkdir.c  mv.c  mv.h  normpath.c  normpath.h  realpath.c  rm.c  rm.h  sep.h  stat.c  stat.h  symlink.c  symlink.h  walkdir.c
src/os/: cpu.c  cpu.h  cpuinfo.c  cpuinfo.h  emulated.c  emulated.h  env.c  env.h  osdetect.c  osdetect.h  privileges.c  privileges.h  rlimit.c  rlimit.h  shell.c  shell.h  system.c  system.h
src/term/: keyboard.c  keyboard.h  screen.c  screen.h
tools/: errors.h.py  program_help.h.py  update-submodules.sh
